--- a/src/layout/background/ParallaxMountains.module.scss
+++ b/src/layout/background/ParallaxMountains.module.scss
@@ -1,5 +1,17 @@
 @reference "../../styles/tailwind-reference.css";
 
+._parallaxViewport {
+  @apply w-full overflow-x-clip;
+}
+
+._desktopMountains {
+  @apply relative flex w-full justify-center overflow-x-clip;
+}
+
+._mobileMountains {
+  @apply relative flex w-full justify-center overflow-x-clip;
+}
+
 ._mountainMiddle {
   @apply absolute w-0 h-0 -z-[1];
 
@@ -32,14 +44,18 @@
 ._mountainMiddleMobile {
   @apply absolute w-0 h-0 -z-[1];
 
+  left: 50%;
   border-width: 0 min(50vw, 350px) 40vh;
   border-style: solid;
   border-color: transparent transparent colors.$dark-shades;
+  transform: translateX(-50%);
 }
 
 ._mountainBackgroundFiller {
-  @apply absolute -z-[5] w-screen bg-dark-shades;
+  @apply absolute -z-[5] bg-dark-shades;
 
+  right: 0;
+  left: 0;
   height: 500vh;
   margin-top: 38vh;
 }
